[gd_scene load_steps=4 format=3 uid="uid://cuso8vcxdwqpd"]

[ext_resource type="Script" uid="uid://dkko8vqpqfomu" path="res://scripts/ui/end_screen.gd" id="1_4ttpn"]
[ext_resource type="FontFile" uid="uid://ggk1tvkr7w1f" path="res://resources/assets/fonts/LeagueSpartan-Bold.otf" id="2_n8r4t"]
[ext_resource type="AudioStream" uid="uid://cbc4igl2p6y6r" path="res://resources/assets/sound_effects/Lose.wav" id="3_wgyui"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ttpn")

[node name="BackGroundColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0.443137)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 640.0
alignment = 1

[node name="GameOverMessage" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_n8r4t")
theme_override_font_sizes/font_size = 40
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScoreMessage" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_n8r4t")
theme_override_font_sizes/font_size = 32
text = "Score: 42"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalTimeMessage" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_n8r4t")
theme_override_font_sizes/font_size = 32
text = "Time: 00:10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartGameMessage" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_n8r4t")
theme_override_font_sizes/font_size = 24
text = "Press R to Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wgyui")
